[package]
name = "veri-isle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = {version="0.11.2", features = ["static-link-z3"]}
z3-sys = {version="0.7.1", features = ["static-link-z3"]}
cranelift-isle = { path = "../isle/isle", version = "=0.80.0" }