[package]
name = "veri_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-isle = { path = "../../isle" }
veri_ir = { path = "../veri_ir" }
veri_annotation = { path = "../veri_annotation" }
rsmt2 = "0.14.1"
clap = "3.1.2"
