[package]
name = "veri_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "veri_engine_lib"
path = "src/lib.rs"

[[bin]]
name = "veri_engine_bin"
path = "src/main.rs"

[dependencies]
cranelift-isle = { path = "../../isle" }
veri_ir = { path = "../veri_ir" }
veri_annotation = { path = "../veri_annotation" }
easy-smt = { git = "https://github.com/elliottt/easy-smt.git" }
clap = "3.1.2"
itertools = "0.10.3"
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
strum = "0.24.0"
strum_macros = "0.24.0"